--- a/practica_integradora/MainWindow.xaml
+++ b/practica_integradora/MainWindow.xaml
@@ -5,14 +5,80 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:practica_integradora"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="750" Width="600"
+        Background="Transparent">
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="iniciar" Content="INICIAR" Click="iniciar_Click"/>
 
-        </StackPanel>
-                    
-        
-    </Grid>
+    <Border CornerRadius="50"
+         BorderThickness="5">
+        <Border.BorderBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#F5EFEB" Offset="0"/>
+                <GradientStop Color="#C8D9E6" Offset="0.75"/>
+            </LinearGradientBrush>
+        </Border.BorderBrush>
+
+        <Border.Background>
+            <LinearGradientBrush >
+                <GradientStop Color="#FFFF" Offset="0"/>
+                <GradientStop Color="#A6BED1" Offset="0.75"/>
+            </LinearGradientBrush>
+        </Border.Background>
+
+
+
+        <Grid>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="25"/>
+                    <ColumnDefinition Width="25"/>
+                    <ColumnDefinition Width="29"/>
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="btnMinimizar"       
+                    Background="#C8D9E6"
+                    BorderThickness="0"
+                    Content="-"
+                    Foreground="White"
+                    FontSize="20"
+                    FontWeight="Black"
+                    Cursor="Hand"
+                    Grid.Column="1" Click="btnMinimizar_Click" HorizontalAlignment="Left" Width="25"/>
+
+                <Button x:Name="btnCerrar"       
+                Background="#C8D9E6"
+                BorderThickness="0"
+                Content="x"
+                Foreground="White"
+                FontSize="14"
+                FontWeight="Black"
+                Cursor="Hand"
+                Grid.Column="2" Height="30" VerticalAlignment="Top" Click="btnCerrar_Click"/>
+            </Grid>
+
+            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="2">
+                <TextBlock Text="BYLE" FontSize="100" FontWeight="Bold" FontFamily="Montserrat" Foreground="#2F4156" HorizontalAlignment="Center"/>
+                <TextBlock Text="Balance Your Life Easily" FontSize="25" Foreground="#577C8E" Margin="0,-10,0,40" HorizontalAlignment="Center"/>
+                <TextBlock Text="¡Bienvenidos!" FontSize="22" FontWeight="SemiBold" Foreground="#F4444444" HorizontalAlignment="Center"/>
+                <Button Content="Comenzar" Width="200" Height="65" Background="#577C8E" Foreground="White" 
+               FontWeight="Bold" FontSize="20" Margin="0,30,0,0" Click="iniciar_Click"
+               Cursor="Hand" BorderThickness="0" />
+
+
+
+            </StackPanel>
+
+
+        </Grid>
+
+    </Border>
+
 </Window>
