--- a/practica_integradora/P_configuracion(sockets_quejas).xaml
+++ b/practica_integradora/P_configuracion(sockets_quejas).xaml
@@ -35,18 +35,26 @@
             <StackPanel>
                 <TextBlock Text="SOPORTE DEL SISTEMA" FontSize="20" Margin="0,8,0,10" FontWeight="Bold" Foreground="#2F4157"
      HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1"/>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Usuario: " FontSize="14" Foreground="#FF222F3F" FontWeight="DemiBold" Margin="5,0,0,0"/>
+                    <TextBox x:Name="usu"  Width="200" Margin="10,0,0,0"  Background="Transparent" BorderThickness="0,0,1,1" />
+
+                </StackPanel>
                 
                 <StackPanel Orientation="Horizontal">
+                    
                     <TextBlock Text="Envia tu queja: " FontSize="14" Foreground="#FF222F3F" FontWeight="DemiBold" Margin="5,0,0,0"/>
-                    <TextBox x:Name="queja"  Width="200" Margin="10,0,0,0" TextChanged="queja_TextChanged" Background="Transparent" BorderThickness="0,0,1,1" />
+                    <TextBox x:Name="queja"  Width="200" Margin="10,0,0,0"  Background="Transparent" BorderThickness="0,0,1,1" />
                     <Button x:Name="enviar_queja" Content="ENVIAR"  Margin="10,0,0,0" Background="#577C8E" Foreground="White" BorderBrush="Transparent" 
-                         BorderThickness="0"/>
+                         BorderThickness="0" Click="enviar_queja_Click"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Estatus de conexion:" FontSize="14" FontWeight="DemiBold" Margin="5,15,0,0"/>
                     <TextBlock x:Name="estado_conexion" FontSize="15" Margin="10,20,0,0"/>
                 </StackPanel>
+                <ListBox x:Name="listaMensajes" Width="300" Height="200"/>
 
             </StackPanel>
 
