Revert "Borre el msj ese"
This reverts commit 66c643233a659b1524c40cbe45d2676ed8046b2f.

--- a/practica_integradora/P_configuracion(sockets_quejas).xaml
+++ b/practica_integradora/P_configuracion(sockets_quejas).xaml
@@ -38,7 +38,7 @@
                 
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Envia tu queja: " FontSize="14" Foreground="#FF222F3F" FontWeight="DemiBold" Margin="5,0,0,0"/>
-                    <TextBox x:Name="queja"  Width="200" Margin="10,0,0,0" Background="Transparent" BorderThickness="0,0,1,1" />
+                    <TextBox x:Name="queja"  Width="200" Margin="10,0,0,0" TextChanged="queja_TextChanged" Background="Transparent" BorderThickness="0,0,1,1" />
                     <Button x:Name="enviar_queja" Content="ENVIAR"  Margin="10,0,0,0" Background="#577C8E" Foreground="White" BorderBrush="Transparent" 
                          BorderThickness="0"/>
                 </StackPanel>
