se agrego y cambio en Socket_cliente varias cosas de los hilos, y en P_configuracion_quejas tambien. Se implementaron los hilos sincronizados

--- a/practica_integradora/P_configuracion(sockets_quejas).xaml
+++ b/practica_integradora/P_configuracion(sockets_quejas).xaml
@@ -12,14 +12,14 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
 
         <Border Grid.Column="1" Grid.Row="1" BorderThickness="6" BorderBrush="#577C8E"
@@ -54,7 +54,9 @@
                     <TextBlock Text="Estatus de conexion:" FontSize="14" FontWeight="DemiBold" Margin="5,15,0,0"/>
                     <TextBlock x:Name="estado_conexion" FontSize="15" Margin="10,20,0,0"/>
                 </StackPanel>
-                <ListBox x:Name="listaMensajes" Width="300" Height="200"/>
+                <ListBox x:Name="listaMensajes" Width="300" Height="150"/>
+                <TextBlock Text="Actividad de Hilos:" FontSize="14" FontWeight="DemiBold" Margin="5,10,0,0"/>
+                <ListBox x:Name="debugMensajes" Width="300" Height="70"/>
 
             </StackPanel>
 
