--- a/practica_integradora/P_configuracion(sockets_quejas).xaml
+++ b/practica_integradora/P_configuracion(sockets_quejas).xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:practica_integradora"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="460" d:DesignWidth="800"
       Title="P_configuracion_sockets_quejas_"
       Background="White">
 
@@ -54,8 +54,9 @@
                     <TextBlock Text="Estatus de conexion:" FontSize="14" FontWeight="DemiBold" Margin="5,15,0,0"/>
                     <TextBlock x:Name="estado_conexion" FontSize="15" Margin="10,20,0,0"/>
                 </StackPanel>
-                <ListBox x:Name="listaMensajes" Width="300" Height="150"/>
-     
+                <ListBox x:Name="listaMensajes" Width="300" Height="150" SelectionChanged="listaMensajes_SelectionChanged"/>
+                <ListBox x:Name="listaHilos" Width="300" Height="100"  Margin="0,10,0,0"/>
+
             </StackPanel>
 
         </Border>
