--- a/practica_integradora/P_configuracion(sockets_quejas).xaml
+++ b/practica_integradora/P_configuracion(sockets_quejas).xaml
@@ -54,8 +54,9 @@
                     <TextBlock Text="Estatus de conexion:" FontSize="14" FontWeight="DemiBold" Margin="5,15,0,0"/>
                     <TextBlock x:Name="estado_conexion" FontSize="15" Margin="10,20,0,0"/>
                 </StackPanel>
-                <ListBox x:Name="listaMensajes" Width="300" Height="150" SelectionChanged="listaMensajes_SelectionChanged"/>
-                <ListBox x:Name="listaHilos" Width="300" Height="100"  Margin="0,10,0,0"/>
+                <ListBox x:Name="listaMensajes" Width="300" Height="120" SelectionChanged="listaMensajes_SelectionChanged"/>
+                <TextBlock Text="Estatus de hilos:" FontSize="14" FontWeight="DemiBold" Margin="5,15,0,0"/>
+                <ListBox x:Name="listaHilos" Width="300" Height="100"  Margin="0,0,0,0"/>
 
             </StackPanel>
 
